--- a/index.html
+++ b/index.html
@@ -52,40 +52,12 @@
       sizes="192x192"
       href="static/media/favicons/favicon-192.png"
     />
-
-    <script src="https://cdn.plot.ly/plotly-2.11.1.min.js"></script>
-    <script src="static/js/plot_network.js" defer></script>
   </head>
   <body>
-    <textarea id="source"> </textarea>
-    <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
-    <script>
-      MathJax = {
-        tex: {
-          inlineMath: [
-            ["$", "$"],
-            ["\\(", "\\)"],
-          ],
-        },
-        svg: {
-          fontCache: "global",
-        },
-      };
-    </script>
-    <script
-      type="text/javascript"
-      id="MathJax-script"
-      async
-      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"
-    ></script>
+    <h1>Programmation Fiable et Coopérente</h1>
+    <h2>Introduction Réseaux</h2>
 
-    <script>
-      var slideshow = remark.create({
-        ratio: "16:9",
-        countIncrementalSlides: false,
-        highlightLines: true,
-        sourceUrl: "slides.md",
-      });
-    </script>
+    <p><a href="/cours1.html"> cours 1 </a></p>
+    <p><a href="/cours2.html"> cours 2 </a></p>
   </body>
 </html>
