--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
 
     <p><a href="/cours1.html"> cours 1 </a></p>
     <p><a href="/cours2.html"> cours 2 </a></p>
+    <p><a href="/cours3.html"> cours 3 </a></p>
   </body>
 </html>
