consistent naming scheme

--- a/cours1.html
+++ b/cours1.html
@@ -84,7 +84,7 @@
         ratio: "16:9",
         countIncrementalSlides: false,
         highlightLines: true,
-        sourceUrl: "slides.md",
+        sourceUrl: "slides1.md",
       });
     </script>
   </body>
