mention the courses titles in index.html

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <h1>Programmation Fiable et Coopérente</h1>
     <h2>Introduction Réseaux</h2>
 
-    <p><a href="/cours1.html"> cours 1 </a></p>
-    <p><a href="/cours2.html"> cours 2 </a></p>
-    <p><a href="/cours3.html"> cours 3 </a></p>
+    <p><a href="/cours1.html"> cours 1 - Introduction réseaux</a></p>
+    <p><a href="/cours2.html"> cours 2 - Côté Serveur !</a></p>
+    <p><a href="/cours3.html"> cours 3 - Framework web --- Flask !</a></p>
   </body>
 </html>
