--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>UE22</title>
+    <title>UE22 - backend</title>
+    <link rel="icon" type="image/svg" href="static/media/logo-p24-favicon.svg">
     <meta charset="utf-8" />
     <!-- <link rel="stylesheet" href="mystyle.css"> -->
 
@@ -17,41 +18,6 @@
       referrerpolicy="no-referrer"
     />
 
-    <link
-      rel="shortcut icon"
-      sizes="16x16"
-      href="static/media/favicons/favicon.png"
-    />
-    <link
-      rel="shortcut icon"
-      sizes="32x32"
-      href="static/media/favicons/favicon-32.png"
-    />
-    <link
-      rel="apple-touch-icon icon"
-      sizes="76x76"
-      href="static/media/favicons/favicon-76.png"
-    />
-    <link
-      rel="apple-touch-icon icon"
-      sizes="120x120"
-      href="static/media/favicons/favicon-120.png"
-    />
-    <link
-      rel="apple-touch-icon icon"
-      sizes="152x152"
-      href="static/media/favicons/favicon-152.png"
-    />
-    <link
-      rel="apple-touch-icon icon"
-      sizes="180x180"
-      href="static/media/favicons/favicon-180.png"
-    />
-    <link
-      rel="apple-touch-icon icon"
-      sizes="192x192"
-      href="static/media/favicons/favicon-192.png"
-    />
   </head>
   <body>
     <h1>Programmation Fiable et Coopérente</h1>
