--- a/index.html
+++ b/index.html
@@ -20,11 +20,26 @@
 
   </head>
   <body>
-    <h1>Programmation Fiable et Coopérente</h1>
-    <h2>Introduction Réseaux</h2>
+    <textarea id="source">
 
-    <p><a href="cours1.html"> cours 1 - Introduction réseaux</a></p>
-    <p><a href="cours2.html"> cours 2 - Côté Serveur !</a></p>
-    <p><a href="cours3.html"> cours 3 - Framework web --- Flask !</a></p>
+      # Programmation Fiable et Coopérante
+
+      ## Introduction Réseaux
+
+      - [cours 1 - Introduction réseaux](cours1.html)
+
+      - [cours 2 - Côté Serveur !](cours2.html)
+
+      - [cours 3 - Framework web --- Flask !](cours3.html)
+
+    </textarea>
+    <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
+    <script>
+      var slideshow = remark.create({
+        ratio: "16:9",
+        countIncrementalSlides: false,
+        highlightLines: true,
+      });
+    </script>
   </body>
 </html>
