--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
       ## Introduction Réseaux
 
-      - [cours 1 - Introduction réseaux](slides.html)
+      - [cours 1 - Introduction réseaux](slides1.html)
 
-      - [cours 2 - Côté Serveur !](slides.html)
+      - [cours 2 - Côté Serveur !](slides2.html)
 
-      - [cours 3 - Framework web --- Flask !](slides.html)
+      - [cours 3 - Framework web --- Flask !](slides3.html)
 
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
