--- a/index.html
+++ b/index.html
@@ -24,13 +24,19 @@
 
       # Programmation Fiable et Coopérante
 
-      ## Introduction Réseaux
+      ## Introduction Réseaux & Backend
 
       - [cours 1 - Introduction réseaux](slides1.html)
 
       - [cours 2 - Côté Serveur !](slides2.html)
 
       - [cours 3 - Framework web --- Flask !](slides3.html)
+
+      <div class="slide_footer">
+        <div class="wrap">
+            <span>2025 - <i> Réseaux & Backend</i> - Index </span>
+        </div>
+      </div>
 
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
