--- a/slides1.html
+++ b/slides1.html
@@ -50,6 +50,13 @@
         highlightLines: true,
         sourceUrl: "slides1.md",
       });
+      document.addEventListener("keydown", function (event) {
+        if (event.shiftKey && event.code === "Space") {
+            event.preventDefault();
+            event.stopImmediatePropagation();
+            slideshow.gotoPreviousSlide();
+        }
+      });
     </script>
   </body>
 </html>
