the title shows the number

--- a/slides2.html
+++ b/slides2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>UE22 - backend</title>
+    <title>UE22 - backend 2/3</title>
     <link rel="icon" type="image/svg" href="static/media/logo-p24-favicon.svg">
     <meta charset="utf-8" />
     <!-- <link rel="stylesheet" href="mystyle.css"> -->
