--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>UE22 - backend 1/3</title>
+    <title>{{title}}</title>
     <link rel="icon" type="image/svg" href="static/media/logo-p24-favicon.svg">
     <meta charset="utf-8" />
     <!-- <link rel="stylesheet" href="mystyle.css"> -->
@@ -50,7 +50,7 @@
         ratio: "16:9",
         countIncrementalSlides: false,
         highlightLines: true,
-        sourceUrl: "slides1.md",
+        sourceUrl: "{{md_file}}",
       });
       document.addEventListener("keydown", function (event) {
         if (event.shiftKey && event.code === "Space") {
