upgrade fontawesome 6.7.2 and plotly 2.3.5.3

--- a/template.html
+++ b/template.html
@@ -3,24 +3,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{title}}</title>
-    <link rel="icon" type="image/svg" href="static/media/logo-p24-favicon.svg">
     <meta charset="utf-8" />
-    <!-- <link rel="stylesheet" href="mystyle.css"> -->
+    <title>{{title}}</title>
+    <link
+      rel="icon"
+      type="image/svg"
+      href="static/media/logo-p24-favicon.svg"
+    />
 
     <style>
       @import url("static/css/minesparis.css");
       @import url("static/css/custom.css");
     </style>
+
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/fontawesome.min.css"
+      integrity="sha512-v8QQ0YQ3H4K6Ic3PJkym91KoeNT5S3PnDKvqnwqFD1oiqIl653crGZplPdU5KKtHjO0QKcQ2aUlQZYjHczkmGw=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
 
-    <script src="https://cdn.plot.ly/plotly-2.11.1.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/plotly.js/2.35.3/plotly.min.js"
+      integrity="sha512-7H/XbvOmUsf6mawBvmmx9BsPt9ew2NTwQ3QDSzNe6iyacDbCJU+7pBbZY1NdmTpuj7snxSsXasMYMiR2tv906g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
     <script src="static/js/plot_network.js" defer></script>
   </head>
   <body>
