--- a/template.html
+++ b/template.html
@@ -5,16 +5,10 @@
   <head>
     <meta charset="utf-8" />
     <title>{{title}}</title>
-    <link
-      rel="icon"
-      type="image/svg"
-      href="static/media/logo-p24-favicon.svg"
-    />
+    <link rel="icon" type="image/svg" href="static/media/logo-p24-favicon.svg">
 
-    <style>
-      @import url("static/css/minesparis.css");
-      @import url("static/css/custom.css");
-    </style>
+    <link rel="stylesheet" href="static/css/minesparis.css">
+    <link rel="stylesheet" href="static/css/custom.css">
 
     <link
       rel="stylesheet"
@@ -22,7 +16,7 @@
       integrity="sha512-v8QQ0YQ3H4K6Ic3PJkym91KoeNT5S3PnDKvqnwqFD1oiqIl653crGZplPdU5KKtHjO0QKcQ2aUlQZYjHczkmGw=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
+    >
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/plotly.js/2.35.3/plotly.min.js"
@@ -31,7 +25,10 @@
       referrerpolicy="no-referrer"
     ></script>
 
+    <!-- our stuff -->
     <script src="static/js/plot_network.js" defer></script>
+    <script src="static/js/runtime.js" defer></script>
+
   </head>
   <body>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
@@ -56,18 +53,8 @@
     ></script>
 
     <script>
-      var slideshow = remark.create({
-        ratio: "16:9",
-        countIncrementalSlides: false,
-        highlightLines: true,
-        sourceUrl: "{{md_file}}",
-      });
-      document.addEventListener("keydown", function (event) {
-        if (event.shiftKey && event.code === "Space") {
-            event.preventDefault();
-            event.stopImmediatePropagation();
-            slideshow.gotoPreviousSlide();
-        }
+      window.addEventListener("DOMContentLoaded", (event) => {
+        run_slideshow("{{md_file}}");
       });
     </script>
   </body>
